# sorry

./: Cargo.toml  README.md
shell/: sorry.bash  sorry.zsh
src/: api.rs  cli.rs  config.rs  history.rs  main.rs
