[package]
name = "sorry"
version = "0.1.0"
edition = "2021"
description = "A tiny CLI that sends your mistakes to an LLM and prints helpful advice"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "5"

[profile.release]
strip = true
lto = true
